--- a/MultiSelects/MultiSelects/MultiSelects.csproj
+++ b/MultiSelects/MultiSelects/MultiSelects.csproj
@@ -166,6 +166,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NativeSelectController.cs" />
+    <Compile Include="DataLayer\ServerFacade.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -208,9 +210,11 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Toolbar.cshtml" />
+    <Content Include="Views\NativeSelect\Display.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Entities\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
