--- a/MultiSelects/MultiSelects/MultiSelects.csproj
+++ b/MultiSelects/MultiSelects/MultiSelects.csproj
@@ -165,6 +165,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BootstrapSelectController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NativeSelectController.cs" />
     <Compile Include="DataLayer\ServerFacade.cs" />
@@ -218,6 +219,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Toolbar.cshtml" />
     <Content Include="Views\NativeSelect\Display.cshtml" />
+    <Content Include="Views\BootstrapSelect\Display.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
